--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,400&display=swap");
 .App {
   text-align: center;
 }
